# iter

./: .gitignore  .lefthook.yaml  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pixi.toml  pyproject.toml  setup.py  typos.toml
.github/workflows/: ci.yaml  deploy-pypi.yml
cherab/iter/: __init__.py
demos/: README.md  calculate_bolometer_rtm.py
docs/source/: api.rst  common_links.rst  conf.py  index.rst
docs/source/_static/: custom.css  switcher.json
docs/source/_templates/: class.rst  method.rst  module.rst
docs/source/user/: ITER_PFCs.ipynb  citation.rst  contribution.rst  index.rst  installation.rst  quickstart.rst
src/cherab/: __init__.pxd
src/cherab/iter/: __init__.py  utility.py  utils.py
src/cherab/iter/jorek/: __init__.py  geometry.pyx  utility.pxd  utility.pyx
src/cherab/iter/machine/: __init__.py  wall.py
