[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "cherab-iter"
description = "Cherab spectroscopy framework, ITER subpackage"
authors = [
  { name = "munechika-koyo", email = "munechika.koyo@gmail.com" },
  { name = "vsnever" },
  { name = "jacklovell" },
]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENCE.txt" }
keywords = ["cherab", "ITER", "tokamak", "fusion", "plasma"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: European Union Public Licence 1.1 (EUPL 1.1)",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["cherab", "platformdirs", "rich"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/cherab"
# Documentation = "https://cherab.github.io/cherab-iter"
Repository = "https://github.com/cherab/iter"
Issues = "https://github.com/cherab/iter/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata.hooks.vcs]

[tool.hatch.build.targets.wheel]
packages = ["src/cherab"]
[tool.hatch.build.targets.wheel.shared-data]
"share/cherab/demos/iter" = "demos/*"


# ------------------------------
# === Lint & Format settings ===
# ------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "B",   # flake8-bugbear
  "F",   # pyflakes
  "I",   # isort (import order)
  "N",   # pep8-naming
  "W",   # Warning
  "UP",  # pyupgrade
  "NPY", # numpy specific rules
]
ignore = [
  # Recommended ignores by ruff when using formatter
  "E501", # line too long
  "N803", # argument name should be lowercase
  "N806", # variable in function should be lowercase
]

[tool.ruff.format]
docstring-code-format = true

[tool.docformatter]
recursive = true
wrap-summaries = 100
wrap-descriptions = 100
blank = false

[tool.numpydoc_validation]
checks = [
  "all",  # report on all checks, except the below
  "GL01", # Docstring text (summary) should start in the line immediately
  "EX01", # No examples section found
  "SA01", # See Also section not found
  "ES01", # No extended summary found
  "GL08", # The object does not have a docstring
  "RT01", # No Returns section found
  "PR01", # Parameters {missing_params} not documented
  "SS06", # Summary should fit in a single line
]
# remember to use single quotes for regex in TOML
exclude = [ # don't report on objects that match any of these regex
  '\.__repr__$',
]
override_SS05 = ['^Process ', '^Assess ', '^Access ']

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=cherab_iter --cov-report term-missing --no-cov-on-fail"


# --------------------------
# === Pixi configuration ===
# --------------------------
[tool.pixi.project]
channels = ["https://prefix.dev/conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64"]

[tool.pixi.dependencies]
platformdirs = "*"
rich = "*"
cherab = "*"
plotly = "*"
data-dictionary = "4.0.*"
imas = "*"

[tool.pixi.host-dependencies]
python = "3.12.*"
hatchling = "*"
hatch-vcs = "*"

[tool.pixi.pypi-dependencies]
cherab-iter = { path = ".", editable = true }
cherab-imas = { git = "https://github.com/munechika-koyo/cherab-imas.git", rev = "1482340d2f6d27c1dc5258b03b329698fb1f7dc5" }

[tool.pixi.pypi-options]
no-build-isolation = ["cherab-iter"]

[tool.pixi.feature.lab.dependencies]
jupyterlab = "*"
ipython = "*"
ipywidgets = "*"

# === Jupter Lab environment ===
[tool.pixi.feature.lab.tasks]
run-jupyterlab = { cmd = [
  "jupyter",
  "lab",
  "--notebook-dir",
  "demos",
], description = "🚀 Run JupyterLab" }

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-cov = "*"

# === Test environment ===
[tool.pixi.feature.test.tasks]
test = { cmd = ["pytest", "tests"], description = "🧪 Run the tests" }

[tool.pixi.feature.lint.dependencies]
ruff = "*"
mypy = "*"
pre-commit = "<4"  # docformatter issue: https://github.com/PyCQA/docformatter/pull/287

# === Lint/Format environment ===
[tool.pixi.feature.lint.tasks]
lint = { cmd = "ruff check", description = "🧹 Lint the code" }
format = { cmd = "ruff check --fix", description = "🎨 Format the code" }
check = { cmd = [
    "pre-commit",
    "run",
    "--all-files",
], description = "🩺 Check the all pre-commit hooks", depends-on = [
    "install-hooks",
] }
install-hooks = { cmd = [
    "pre-commit",
    "install",
], description = "🔗 Install pre-commit hooks" }

[tool.pixi.environments]
lab = { features = ["lab"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
lint = { features = ["lint"], no-default-feature = true }
